# cochise

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  README_new.md  TODO.md  overview.mmd  pyproject.toml
.github/: FUNDING.yml
docs/: INSTALL-AND-SETUP.md  did-not-work-out.md  history.md  running-cochise-vs-goat.md  walkthrough.md
examples/states/: asrep.txt  password_in_user_description.txt  spraying_into_sysvol.txt
run-trajectories/: run-20260427-081451.json  run-20260427-081524.json  run-20260427-135436.json  run-20260427-142753.json  run-20260427-142929.json  run-20260427-142958.json  run-20260427-143751.json  run-20260428-075731.json  run-20260428-101313.json  run-20260428-101518.json  run-20260428-104645.json  run-20260428-132927.json  run-20260428-141140.json  run-20260428-141437.json  run-20260428-144457.json  run-20260428-162837.json  run-20260428-163920.json  run-20260428-165342.json  run-20260428-165432.json  run-20260429-094103.json  run-20260429-100324.json  run-20260429-105300.json  run-20260429-110657.json  run-20260429-125327.json  run-20260429-142107.json  run-20260429-142115.json  run-20260429-142510.json  run-20260429-161502.json  run-20260429-202030.json  run-20260430-075554.json  run-20260430-075936.json  run-20260430-082626.json  run-20260430-085511.json  run-20260501-095037.json  run-20260501-101014.json  run-20260501-101339.json  run-20260501-101639.json  run-20260501-142447.json  run-20260501-182003.json  run-20260501-183252.json  (+12 more)
scenario-data/: users.txt
src/: agent_analzyer.py  analyze-create-tables.py  analyze-json-graphs.py  analyze-json-logs.py  analyze-replay.py  cochise-replay.py  cochise.py  common.py  create-graphs.py  create-mitre-stats.py  create-overview-table.py  create-tool-analysis-errors.py  executor.py  fabric_ssh.py  kalissh.py  knowledge.py  logger.py  ptt.py  ssh.py  summarizer.py  wintermute.py
src/analysis/: analyze-create-tables.py  analyze-json-logs.py  analyze-run-stats.py  analyze-token-usage.py  common.py  common_analysis.py  create-graphs.py  create-mitre-stats.py  create-tool-analysis.py  visitor.py  (+2 more)
(+95 files in other folders)
