[project]
name = "cochise"
version = "0.0.2"
description = "Autonomously attack AD networks using LLMs"
readme = "README.md"
authors = [
    { name = "Andreas Happe", email = "andreas@offensive.one" }
]
requires-python = ">=3.12"
dependencies = [
	"asyncssh>=2.22.0",
	"litellm",
	"numpydoc>=1.10.0",
	"rich>=14.3.3",
	"structlog>=25.5.0",
]

[project.scripts]
cochise = "cochise.cli.cochise:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 99        # as allowed by https://peps.python.org/pep-0008/#maximum-line-length
